--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/sno.png" />
+    <link rel="icon" href="logo.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Snowy Owl $SNO, a JOE pegged algostable" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/sno.png" />
+    <meta name="description" content="WALRUS $WLRS, a UST pegged algostable" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
